@@ -1,25 +1,29 @@
 package md.mirrerror.discordutils.commands.discordutils;
 
-import md.mirrerror.discordutils.Main;
+import lombok.RequiredArgsConstructor;
 import md.mirrerror.discordutils.commands.SubCommand;
 import md.mirrerror.discordutils.config.messages.Message;
+import md.mirrerror.discordutils.config.settings.BotSettings;
 import md.mirrerror.discordutils.discord.EmbedManager;
+import md.mirrerror.discordutils.models.DiscordUtilsBot;
 import md.mirrerror.discordutils.utils.Validator;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 
 import java.awt.*;
-import java.util.Arrays;
-import java.util.Collections;
 
+@RequiredArgsConstructor
 public class SendToDiscord implements SubCommand {
+
+    private final DiscordUtilsBot bot;
+    private final BotSettings botSettings;
 
     @Override
     public void onCommand(CommandSender sender, Command command, String label, String[] args) {
-        if(!Validator.validateCommandToggleness(sender, Main.getInstance().getBotSettings().MESSAGES_CHANNEL_ENABLED))
+        if(!Validator.validateCommandToggleness(sender, botSettings.MESSAGES_CHANNEL_ENABLED))
             return;
 
-        Main.getInstance().getBot().getJda().getGuilds().forEach(guild -> {
+        bot.getJda().getGuilds().forEach(guild -> {
             StringBuilder text = new StringBuilder();
             for(int i = 2; i < args.length; i++) text.append(args[i]).append(" ");
 
@@ -32,8 +36,8 @@ public class SendToDiscord implements SubCommand {
 
             if(!Validator.validateColor(sender, color)) return;
 
-            Main.getInstance().getBot().sendMessageEmbed(Main.getInstance().getBot().getMessagesTextChannel(),
-                    new EmbedManager().embed(args[0], text.toString().trim().replace("\\n", "\n"), color, Message.SENDTODISCORD_SENT_BY.getText().replace("%sender%", sender.getName())));
+            bot.sendMessageEmbed(bot.getMessagesTextChannel(),
+                    new EmbedManager(botSettings).embed(args[0], text.toString().trim().replace("\\n", "\n"), color, Message.SENDTODISCORD_SENT_BY.getText().replace("%sender%", sender.getName())));
             Message.DISCORDUTILS_SENDTODISCORD_SUCCESSFUL.send(sender, true);
         });
     }
@@ -50,7 +54,7 @@ public class SendToDiscord implements SubCommand {
 
     @Override
     public java.util.List<String> getAliases() {
-        return Collections.unmodifiableList(Arrays.asList("sendtodis", "std", "stodis", "stdis"));
+        return java.util.List.of("sendtodis", "std", "stodis", "stdis");
     }
 
     @Override
